AWS/ELB.tf
#-----------------------------------------------------------------------------
# Create load balancer, Add listerns, Add health Check and Add Instance
#-----------------------------------------------------------------------------
resource "aws_elb" "LB" {
  name               = "${var.lb_name["lb1"]}"
  availability_zones = ["us-east-1a", "us-east-1b", "us-east-1c"]
  security_groups = ["${aws_security_group.allow_web.id}"]

  
  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  
  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "HTTP:80/"
    interval            = 30
  }

  instances                   = ["${aws_instance.webec2.id}"]
  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 400

  tags = {
    Name = "terraform-elb"
  }
}
#-----------------------------------------------------------------------------
# Create AWS SG for LB and allow access
#-----------------------------------------------------------------------------

resource "aws_security_group" "allow_web" {
  name  = "${var.sg[1]}"
  description = "Web Servers LB"

  ingress {
      from_port = 80 # Allow Web Server access world wide 
      to_port = 80
      protocol = "tcp"
      cidr_blocks = [lookup(var.cidrblock, "vpn")]
      description = "Corporate VPN"
  }
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
      }
}
